<resources>
    <string name="app_name">Honeydew List</string>
    <string name="passwordHint">Password</string>
    <string name="login">Sign in</string>
    <string name="usernameHint">Username</string>
    <string name="LoginTitle">Login</string>
    <string name="defaultText">Error: Unknown Username</string>
    <string name="title_activity_home_screen">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_rewards">Rewards</string>
    <string name="title_options">Options</string>
    <string name="title_friends">Friends</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="register">Register</string>
    <string name="finish">Finish</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="nextButtonText">next</string>
    <string name="next">Next</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="appTitle">Honeydew List</string>
    <string name="registerButtonText">Register</string>
    <string name="verifyPasswordHint">Verify Password</string>
    <string name="security_questions">Security Questions</string>
    <string name="label">Question 1</string>
    <string name="option_1">What was the house number and street name you lived in as a child?</string>
    <string name="option_2">What were the last four digits of your childhood telephone number?</string>
    <string name="option_3">What primary school did you attend?</string>
    <string name="option_4">In what town or city was your first full time job?</string>
    <string name="option_5">In what town or city did you meet your spouse or partner?</string>
    <string name="option_6">What is the middle name of your oldest child?</string>
    <string name="option_7">What are the last five digits of your driver\'s license number?</string>
    <string name="option_8">What is your grandmother\'s (on your mother\'s side) maiden name?</string>
    <string name="option_9">What is your spouse or partner\'s mother\'s maiden name?</string>
    <string name="option_10">In what town or city did your parents meet?</string>
    <string name="option_11">What time of the day were you born? (hh:mm)</string>
    <string name="option_12">What time of the day was your first child born? (hh:mm)</string>
    <string name="answer">Answer</string>
    <string name="security_question_1">Question 1</string>
    <string name="security_question_2">Question 2</string>
    <string name="security_question_3">Question 3</string>
    <string name="defaultTextViewValue">TextView</string>
    <string name="completed">Completed</string>
    <string name="ownerLabel">Owner:</string>
    <string name="title_activity_create_task">Create Task</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task_detail">Task Details</string>
    <string name="add_task">Add Task</string>
    <string name="add_reward">Add Reward</string>
    <string name="filter">Filter Items</string>
    <string name="done">Done</string>
    <string name="reward">Reward</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="emailHint">Email</string>
    <string name="log_out_home">Log Out</string>
    <string name="melonText">%s &#127816;</string>
    <string name="menuUser">%s</string>
    <string name="redeem">Redeem</string>
    <string name="title_activity_create_reward">Create Reward</string>
    <string name="cost">Melon Cost</string>
    <string name="title_activity_reward_detail">Reward Details</string>
    <string name="owner">Owner</string>
    <string name="status">Status</string>
    <string name="CompletedStatusText">Completed, Not Verified</string>
    <string name="VerifiedStatusText">Completed and Verified</string>
    <string name="NotCompletedText">Not Completed</string>
    <string name="complete">Complete</string>
    <string name="verify">Verify</string>
    <string name="NotRedeemed">Not redeemed yet</string>
</resources>
