<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/option_1"
        android:title="@string/option_1" />
    <item android:id="@+id/option_2"
        android:title="@string/option_2" />
    <item android:id="@+id/option_3"
        android:title="@string/option_3" />
    <item android:id="@+id/option_4"
        android:title="@string/option_4" />
    <item android:id="@+id/option_5"
        android:title="@string/option_5" />
    <item android:id="@+id/option_6"
        android:title="@string/option_6" />
    <item android:id="@+id/option_7"
        android:title="@string/option_7" />
    <item android:id="@+id/option_8"
        android:title="@string/option_8" />
    <item android:id="@+id/option_9"
        android:title="@string/option_9" />
    <item android:id="@+id/option_10"
        android:title="@string/option_10" />
    <item android:id="@+id/option_11"
        android:title="@string/option_11" />
    <item android:id="@+id/option_12"
        android:title="@string/option_12" />
</menu>