<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.home_screen.ui.rewards.RewardDetailActivity"
    tools:showIn="@layout/activity_reward_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/reward"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/defaultTextViewValue" />

        <TextView
            android:id="@+id/status_label"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:text="@string/status" />

        <TextView
            android:id="@+id/status"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/defaultTextViewValue" />

        <TextView
            android:id="@+id/owner_label"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:text="@string/owner" />

        <TextView
            android:id="@+id/owner"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/defaultTextViewValue" />

        <TextView
            android:id="@+id/description_label"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:text="@string/description" />

        <TextView
            android:id="@+id/description"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginBottom="@dimen/text_margin"
            android:text="@string/defaultTextViewValue" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>